--- a/Astuti_CV_MPSA2025.tex
+++ b/Astuti_CV_MPSA2025.tex
@@ -24,7 +24,7 @@
 % -------------------- Name block --------------------
 \begin{document}
 
-{\LARGE \textbf{An Nisa Tri Astuti}}\\
+{\LARGE \textbf{An Nisa Astuti}}\\
 \href{mailto:annisaastuti@uchicago.edu}{annisaastuti@uchicago.edu}
 
 \section*{Education}
